# secreto-notify

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
