[package]
name = "secreto-notify"
version = "0.1.0"
authors = ["James Patrick Keegan <james.patrick.keegan.business@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "*"
notify-rust = "4"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
sha-1 = "0.9.6"
clokwerk = "0.3.5"